--- a/desarrollo.html
+++ b/desarrollo.html
@@ -45,11 +45,11 @@
           <!-- Swiper -->
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="img/PRESENTACION.png" alt="" class="mx-auto d-block"></div>
-      <div class="swiper-slide"><img src="img/intro.png" alt="" class="mx-auto d-block"></div>
-      <div class="swiper-slide"><img src="img/front.png" alt="" class="mx-auto d-block"></div>
-      <div class="swiper-slide"><img src="img/back.png" alt="" class="mx-auto d-block"></div>
-      <div class="swiper-slide"><img src="img/graci.png" alt="" class="mx-auto d-block"></div>
+      <div class="swiper-slide"><img src="img/PRESENTACION.png" alt="" class="mx-auto  img-fluid d-block"></div>
+      <div class="swiper-slide"><img src="img/intro.png" alt="" class="mx-auto d-block img-fluid "></div>
+      <div class="swiper-slide"><img src="img/front.png" alt="" class="mx-auto d-block img-fluid "></div>
+      <div class="swiper-slide"><img src="img/back.png" alt="" class="mx-auto d-block" img-fluid ></div>
+      <div class="swiper-slide"><img src="img/graci.png" alt="" class="mx-auto d-block img-fluid "></div>
      
     </div>
     <div class="swiper-button-next text-light"></div>
